--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "chart.js": "^4.4.6",
+    "framer-motion": "^11.14.4",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
